# bib_lookup

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  README.md  demo.ipynb  nicegui_app.py  push2pypi.sh  pyproject.toml  requirements.txt  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check-formatting.yml  publish.yml  run-pytest.yml
bib_lookup/: __init__.py  _bib.py  _const.py  bib_lookup.py  citation_mixin.py  cli.py  utils.py  version.py
bib_lookup/styles/: __init__.py  apa.py  chicago.py  gbt7714.py  ieee.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
sample-files/: cache-after-update.csv  cache-before-update.csv  clean_database.bib  complicated_items.bib  expected_output.bib  invalid_items.bib  large_database.bib  sample-source-exception.tex  sample-source-sub1.tex  sample-source-sub2-1.tex  sample-source-sub2-2.tex  sample-source-sub2.tex  sample-source-sub3.tex  sample-source.tex
sample-files/sample-source-subdir/: some-tikz.tex
test/: cache-after-update.csv  expected_output.bib  invalid_items.bib  large_database.bib  sample_input.txt  test_arxiv_bib_lookup.py  test_bib_lookup_handlers.py  test_bibitem.py  test_checking.py  test_citation_mixin.py  test_cli.py  test_doi_bib_lookup.py  test_io.py  test_pubmed_bib_lookup.py  test_styles.py  test_utils.py
test/sample-files/: cache-before-update.csv  sample-source-sub1.tex  sample-source-sub2-1.tex  sample-source-sub2-2.tex  sample-source-sub2.tex  sample-source.tex
test/sample-files/sample-source-subdir/: some-table.tex  some-tikz.tex
