[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bib-lookup"
dynamic = ["version"]
description = "A useful tool for looking up Bib entries using DOI, or pubmed ID (or URL), or arXiv ID (or URL)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4",
    "feedparser",
    "numpy",
    "packaging",
    "pandas",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
app = [
    "streamlit",
]
dev = [
    "IPython",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "streamlit",
]
test = [
    "IPython",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.scripts]
bib-lookup = "bib_lookup.cli:main"

[project.urls]
Homepage = "https://github.com/DeepPSP/bib_lookup"

[tool.hatch.version]
path = "bib_lookup/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bib_lookup",
]
