[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bib-lookup"
dynamic = ["version"]
description = "A useful tool for looking up Bib entries using DOI, or pubmed ID (or URL), or arXiv ID (or URL)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [
    { name = "DeepPSP", email = "wenh06@gmail.com" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4",
    "feedparser",
    "numpy",
    "packaging",
    "pandas",
    "PyYAML",
    "requests",
]

[project.optional-dependencies]
app = [
    "streamlit",
]
dev = [
    "IPython",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "streamlit",
]
test = [
    "IPython",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[project.scripts]
bib-lookup = "bib_lookup.cli:main"

[project.urls]
Homepage = "https://github.com/DeepPSP/bib_lookup"

[tool.hatch.version]
path = "bib_lookup/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/bib_lookup",
]

[tool.coverage.run]
source = ["bib_lookup"]
patch = ["subprocess"]

[tool.coverage.report]
omit = [
    # omit all test files
    "tests/*",
]
# show_missing = true
# skip_covered = true
exclude_also =[
    "raise NotImplementedError",
    # Don't complain if non-runnable code isn't run:
    "if __name__ == .__main__.:",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]
